# platformer-c

./: CMakeLists.txt  build.sh
src/: main.c
